--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,13 @@
 
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!--Spring依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.2.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
